--- a/rutorrent/conf/plugins.ini
+++ b/rutorrent/conf/plugins.ini
@@ -1,6 +1,6 @@
-;; Plugin's permissions. 
-;; If flag not founded in plugin section, it finded in section "default".
-;; If not founded in this section - it assumed as "yes". 
+;; Plugins' permissions. 
+;; If flag is not found in plugin section, corresponding flag from "default" section is used.
+;; If flag is not found in "default" section, it is assumed to be "yes".
 ;;
 ;; For setting individual plugin's permissions you must write something like that:
 ;;
