--- a/rutorrent/conf/access.ini
+++ b/rutorrent/conf/access.ini
@@ -1,5 +1,5 @@
 ;; ruTorrent permissions.
-;; By default all flags is assumed as "yes".
+;; All flags are assumed to be "yes" by default.
 
 [settings]
 showDownloadsPage = yes
