--- a/trunk/rutorrent/conf/plugins.ini
+++ b/trunk/rutorrent/conf/plugins.ini
@@ -2,10 +2,10 @@
 ;; If flag is not found in plugin section, corresponding flag from "default" section is used.
 ;; If flag is not found in "default" section, it is assumed to be "yes".
 ;;
-;; For setting individual plugin permissions you must write something like that:
+;; Example of individual plugin settings:
 ;;
 ;; [ratio]
-;; enabled = yes			;; also may be "user-defined", in this case user can control plugin's state from UI
+;; enabled = yes ;; if set to "user-defined", the user will be able to control plugin's state from UI
 ;; canChangeToolbar = yes
 ;; canChangeMenu = yes
 ;; canChangeOptions = no
